clusters/building-blocks/other/apps/paperless-ngx/app/paperless-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: paperless
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 3004
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: main
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8000
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 50m
              memory: 200Mi
          startupProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-data
            - mountPath: /usr/src/paperless/media
              name: paperless-media
            - mountPath: /usr/src/paperless/consume
              name: documents-consume
            - mountPath: /usr/src/paperless/export
              name: documents-export
              # reason: https://github.com/paperless-ngx/paperless-ngx/issues/9609 --> https://github.com/just-containers/s6-overlay/issues/600
              # securityContext:
              #   allowPrivilegeEscalation: false
              #   capabilities:
              #     drop:
              #       - ALL
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media-pvc
        - name: documents-consume
          persistentVolumeClaim:
            claimName: pvc-nfs-documents-consume
        - name: documents-export
          persistentVolumeClaim:
            claimName: pvc-nfs-documents-export
