clusters/building-blocks/other/apps/paperless-ngx/app/paperless-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: default
  labels:
    app.kubernetes.io/name: paperless
spec:
  selector:
    app.kubernetes.io/name: paperless
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
