clusters/building-blocks/other/apps/paperless-ngx/app/paperless-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: default
  labels:
    app.kubernetes.io/name: paperless
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`docs.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: paperless
          namespace: default
          passHostHeader: true
          port: 80
          scheme: http
